--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,7 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/backgroundLogin">
+    android:background="@drawable/background_login">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,7 +25,8 @@
             android:textSize="25sp"
             android:padding="10dp"
             android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="15dp"
+            android:textColorHint="#757575"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,7 +38,8 @@
             android:textSize="25sp"
             android:padding="10dp"
             android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="15dp"
+            android:textColorHint="#757575"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,7 +49,7 @@
             android:textSize="25sp"
             android:id="@+id/login_register_tv"
             android:layout_marginBottom="15dp"
-            android:textColor="#FFF"/>
+            android:textColor="#FFF" />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
