--- a/app/src/main/res/xml/provider.xml
+++ b/app/src/main/res/xml/provider.xml
@@ -2,5 +2,5 @@
 <paths>
     <external-path
         name="/storage/emulated/0"
-        path="/Android/data/com.example.huecoscolombia/files/"></external-path>
+        path="/Android/data/com.example.huecoscolombia192/files/"></external-path>
 </paths><!--3...-->
