--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:background="@drawable/round_edge"
+            android:textColor="#000"
             android:hint="@string/name_hint"
             android:padding="10dp"
             android:layout_margin="15dp"
@@ -60,6 +61,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:background="@drawable/round_edge"
+            android:textColor="#000"
             android:hint="@string/email_hint"
             android:padding="10dp"
             android:layout_margin="15dp"
@@ -77,6 +79,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:background="@drawable/round_edge"
+            android:textColor="#000"
             android:hint="@string/password_hint"
             android:padding="10dp"
             android:layout_margin="15dp"
@@ -87,6 +90,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:textColor="#000"
             android:background="@drawable/round_edge"
             android:hint="@string/new_password"
             android:padding="10dp"
@@ -99,6 +103,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:background="@drawable/round_edge"
+            android:textColor="#000"
             android:hint="@string/repassword_hint"
             android:padding="10dp"
             android:layout_margin="15dp"
