--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:layout_marginLeft="70dp"
-            android:text="hola"
+            android:text=""
             android:layout_marginRight="75dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
