--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -21,6 +21,7 @@
             android:background="@drawable/round_edge"
             android:hint="@string/name_hint"
             android:padding="10dp"
+            android:textColor="#000"
             android:layout_margin="15dp"
             android:id="@+id/signup_name_et"
             android:textColorHint="#757575"/>
@@ -31,6 +32,7 @@
             android:background="@drawable/round_edge"
             android:hint="@string/user_hint"
             android:padding="10dp"
+            android:textColor="#000"
             android:layout_margin="15dp"
             android:id="@+id/signup_user_et"
             android:textColorHint="#757575"/>
@@ -41,6 +43,7 @@
             android:background="@drawable/round_edge"
             android:hint="@string/email_hint"
             android:padding="10dp"
+            android:textColor="#000"
             android:layout_margin="15dp"
             android:id="@+id/signup_email_et"
             android:textColorHint="#757575"/>
@@ -50,6 +53,7 @@
             android:textSize="20sp"
             android:background="@drawable/round_edge"
             android:hint="@string/password_hint"
+            android:textColor="#000"
             android:padding="10dp"
             android:layout_margin="15dp"
             android:id="@+id/signup_password_et"
@@ -61,6 +65,7 @@
             android:background="@drawable/round_edge"
             android:hint="@string/repassword_hint"
             android:padding="10dp"
+            android:textColor="#000"
             android:layout_margin="15dp"
             android:id="@+id/signup_repassword_et"
             android:textColorHint="#757575"/>
