--- a/app/src/main/res/layout/fragment_publish_photo.xml
+++ b/app/src/main/res/layout/fragment_publish_photo.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <LinearLayout
@@ -77,5 +77,5 @@
         android:background="@drawable/back_arrow"
         android:layout_margin="10dp"
         android:id="@+id/publish_photo_back_btn"/>
-    </ScrollView>
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
