--- a/app/src/main/res/layout/row_list_users_admin.xml
+++ b/app/src/main/res/layout/row_list_users_admin.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:id="@+id/row_list_admin_name_tv"
+            android:id="@+id/row_list_users_admin_name_tv"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="205dp"
             android:layout_marginLeft="10dp"/>
@@ -21,19 +21,22 @@
         android:id="@+id/row_list_users_admin_lock_btn"
         android:layout_alignParentRight="true"
         android:layout_marginRight="75dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:background="@drawable/locked"/>
     <ImageButton
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:id="@+id/row_list_users_admin_edit_btn"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit"/>
     <ImageButton
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:id="@+id/row_list_users_admin_delete_btn"
         android:layout_alignParentRight="true"
         android:layout_marginRight="140dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:background="@drawable/clear"/>
 </RelativeLayout>
