--- a/app/src/main/res/layout/fragment_list_users_admin.xml
+++ b/app/src/main/res/layout/fragment_list_users_admin.xml
@@ -30,10 +30,11 @@
             android:id="@+id/fr_list_users_admin_users_lv"/>
     </LinearLayout>
     <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
-        android:id="@+id/fr_list_users_admin_search_btn"/>
+        android:id="@+id/fr_list_users_admin_search_btn"
+        android:background="@drawable/search"/>
 </RelativeLayout>
