--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:scrollbarAlwaysDrawVerticalTrack="true">
     <Toolbar
         android:layout_width="match_parent"
@@ -67,13 +69,14 @@
             android:layout_margin="15dp"
             android:id="@+id/edit_profile_email"
             android:textColorHint="#757575"/>
+
         <Switch
+            android:id="@+id/edit_profile_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:paddingLeft="15dp"
             android:layout_marginTop="10dp"
-            />
+            android:paddingLeft="15dp" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -120,4 +123,5 @@
             android:textSize="25sp"
             android:padding="10dp"/>
     </LinearLayout>
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
