login with google

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,6 +67,13 @@
                 android:layout_marginTop="20dp"
                 android:textColor="@color/colorPrimary"
                 android:id="@+id/login_login_btn"/>
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/login_login_btn"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"/>
         </RelativeLayout>
     </LinearLayout>
 </RelativeLayout>
