--- a/app/src/main/res/layout/fragment_list_admin.xml
+++ b/app/src/main/res/layout/fragment_list_admin.xml
@@ -19,13 +19,15 @@
                 android:layout_height="wrap_content"
                 android:text="@string/pending"
                 android:layout_marginRight="10dp"
-                android:textSize="18sp"/>
+                android:textSize="18sp"
+                android:id="@+id/fr_list_admin_todo_cb"/>
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/in_process"
                 android:layout_marginRight="10dp"
-                android:textSize="18sp"/>
+                android:textSize="18sp"
+                android:id="@+id/fr_list_admin_inprocess_cb"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,13 +40,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/solve"
                 android:textSize="18sp"
-                android:layout_marginRight="10dp"/>
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/messages"
-                android:textSize="18sp"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginRight="10dp"
+                android:id="@+id/fr_list_admin_done_cb"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
