--- a/app/src/main/res/layout/row_message.xml
+++ b/app/src/main/res/layout/row_message.xml
@@ -4,6 +4,16 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="30sp"
+        android:visibility="gone"
+        android:textAlignment="center"
+        android:id="@+id/message_date_all"
+        />
+    <TextView
+        android:layout_below="@id/message_date_all"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
@@ -20,6 +30,7 @@
         android:id="@+id/message_date_tv"/>
 
     <TextView
+        android:layout_below="@id/message_date_all"
         android:visibility="gone"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
