--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -59,17 +59,7 @@
             android:layout_margin="15dp"
             android:id="@+id/edit_profile_name_et"
             android:textColorHint="#757575"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:background="@drawable/round_edge"
-            android:textColor="#000"
-            android:hint="@string/email_hint"
-            android:padding="10dp"
-            android:layout_margin="15dp"
-            android:id="@+id/edit_profile_email"
-            android:textColorHint="#757575"/>
+
 
         <Switch
             android:id="@+id/edit_profile_switch"
@@ -77,6 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginTop="10dp"
+            android:text="Cambiar contraseña "
             android:paddingLeft="15dp" />
         <EditText
             android:layout_width="match_parent"
@@ -85,12 +76,14 @@
             android:background="@drawable/round_edge"
             android:textColor="#000"
             android:hint="@string/password_hint"
+            android:inputType="textPassword"
             android:padding="10dp"
             android:layout_margin="15dp"
             android:id="@+id/edit_profile_password"
             android:textColorHint="#757575"
-            android:enabled="false"/>
+            />
         <EditText
+            android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -101,8 +94,9 @@
             android:layout_margin="15dp"
             android:id="@+id/edit_profile_new_password"
             android:textColorHint="#757575"
-            android:enabled="false"/>
+            />
         <EditText
+            android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -113,7 +107,7 @@
             android:layout_margin="15dp"
             android:id="@+id/edit_profile_confirm_password"
             android:textColorHint="#757575"
-            android:enabled="false"/>
+            />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
